<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listlanguageOneRowModel" type="com.example.myhome.modules.propiedadseleccionadausuariostwo.data.model.ListlanguageOneRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowlanguage"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:id="@+id/txtLanguageOne1"
            android:layout_height="wrap_content"
            android:layout_weight="0.28" android:layout_width="0dp"
            android:text="@{listlanguageOneRowModel.txtLanguageOne1}"
            style="@style/txtOpenSansopensansmedium12_1" tools:text="@string/lbl_ambientes_4"/>
        <TextView android:id="@+id/txtLanguageOne2"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.15" android:layout_width="0dp"
            android:text="@{listlanguageOneRowModel.txtLanguageOne2}"
            style="@style/txtOpenSansopensansmedium12_1" tools:text="@string/lbl_ba_os_1"/>
        <TextView android:id="@+id/txtLanguageTwo"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_weight="0.23" android:layout_width="0dp"
            android:text="@{listlanguageOneRowModel.txtLanguageTwo}"
            style="@style/txtOpenSansopensansmedium12_1" tools:text="@string/lbl_cocheras_1"/>
        <TextView android:id="@+id/txtLanguageThree"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_weight="0.33" android:layout_width="0dp"
            android:text="@{listlanguageOneRowModel.txtLanguageThree}"
            style="@style/txtOpenSansopensansmedium12_1" tools:text="@string/lbl_habitaciones_2"/>
    </LinearLayout>
</layout>
