<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listquinchoRowModel" type="com.example.myhome.modules.propiedadseleccionadausuariostwo.data.model.ListquinchoRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowquincho"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtQuincho"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.3" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listquinchoRowModel.txtQuincho}"
            style="@style/txtOpenSansromanbold12" tools:text="@string/lbl_quincho"/>
        <TextView android:ellipsize="end" android:id="@+id/txtJacuzzi"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.25" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listquinchoRowModel.txtJacuzzi}"
            style="@style/txtOpenSansromanbold12" tools:text="@string/lbl_jacuzzi"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSUM"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_46pxh"
            android:layout_weight="0.16" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listquinchoRowModel.txtSUM}"
            style="@style/txtOpenSansromanbold12" tools:text="@string/lbl_sum"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLaundry"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.29" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listquinchoRowModel.txtLaundry}"
            style="@style/txtOpenSansromanbold12" tools:text="@string/lbl_laundry"/>
    </LinearLayout>
</layout>
