<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registrarErrorVM" type="com.example.myhome.modules.registrarerror.data.viewmodel.RegistrarErrorVM"/>
    </data>
    <LinearLayout android:id="@+id/linearRegistrarError"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle_1">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="@dimen/_21pxh"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="@dimen/_21pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <ImageView android:id="@+id/imageCasaTwentyOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_101pxh"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_89pxv"
            android:layout_width="@dimen/_187pxh"
            android:scaleType="fitXY" imageRes="@{@drawable/img_casa21}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_casa21"/>
        <TextView android:ellipsize="end" android:id="@+id/txtMyHome"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registrarErrorVM.registrarErrorModel.txtMyHome}"
            style="@style/txt" tools:text="@string/lbl_my_home"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtCreartucuenta"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{registrarErrorVM.registrarErrorModel.txtCreartucuenta}"
            style="@style/txtOpenSansopensansregular18" tools:text="@string/msg_crear_tu_cuenta"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEmail"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_60pxh"
            android:layout_marginStart="@dimen/_60pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registrarErrorVM.registrarErrorModel.txtEmail}"
            style="@style/txtOpenSansopensansmedium14" tools:text="@string/lbl_email"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_f2_border_red_600_radius_12"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etInputplacehold"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@={registrarErrorVM.registrarErrorModel.etInputplaceholdValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRoundedOutline_8" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtErrordebeingr"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{registrarErrorVM.registrarErrorModel.txtErrordebeingr}"
            style="@style/txtOpenSansopensansregular12_1" tools:text="@string/msg_error_debe_ingr"/>
        <TextView android:ellipsize="end" android:id="@+id/txtContrasea"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_60pxh"
            android:layout_marginStart="@dimen/_60pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registrarErrorVM.registrarErrorModel.txtContrasea}"
            style="@style/txtOpenSansopensansmedium14" tools:text="@string/lbl_contrase_a"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_f2_border_red_600_radius_12"
            android:ellipsize="end"
            android:hint="@string/lbl_contrase_a"
            android:id="@+id/etInputplaceholdOne"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@={registrarErrorVM.registrarErrorModel.etInputplaceholdOneValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRoundedOutline_8" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtIngresalacont"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registrarErrorVM.registrarErrorModel.txtIngresalacont}"
            style="@style/txtOpenSansopensansregular12_1" tools:text="@string/msg_ingresa_la_cont"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnCrearCuenta"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_40pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_88pxv"
            android:layout_width="@dimen/_270pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@string/lbl_crear_cuenta"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_crear_cuenta"/>
    </LinearLayout>
</layout>
